# libi

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs
src/parser/: cmake.rs  mod.rs
src/utils/: build_lib.rs  mod.rs  usage.rs
test_project/: CMakeLists.txt
