[package]
name = "libi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
platform-dirs = "0.3.0"
colored = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"